[mac] Only images that are actually purgeable should be advertised as such. <https://webkit.org/b/138759> <rdar://problem/13205438>

Reviewed by Tim Horton.

Instead of saying that all images on >=Yosemite are purgeable, have BitmapImage
forward the question to CGImage for the correct answer.

The memory may be marked non-volatile by frameworks underneath WebKit at any
given time, but that's not something we need to worry about.

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::decodedDataIsPurgeable):
* platform/graphics/BitmapImage.h:
* platform/graphics/cg/BitmapImageCG.cpp:
(WebCore::BitmapImage::decodedDataIsPurgeable):
* platform/graphics/cg/ImageSourceCG.cpp:
(WebCore::ImageSource::createFrameAtIndex):
* platform/spi/cg/CoreGraphicsSPI.h:

Canonical link: https://commits.webkit.org/156607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176149 268f45cc-cd09-0410-ab3c-d52691b4dbfc